 * Add alt attributes to Topic table view type icons.  This closes
   http://dev.plone.org/plone/ticket/5562
   [alecm]

 * Fixed validation of filenames uploaded from IE.  This closes
   http://dev.plone.org/plone/ticket/5889.
   [alecm]

 * Reenabled translation of AJAX-ified smart folder info. This closes
   http://dev.plone.org/plone/ticket/5806.
   [hannosch]

 * Got rid of last remnants of zLOG. Grep is our friend!
   [stefan]

 * Added a relative path criterion for Smart Folders to allow search paths
   like "../somefolder"
   [ender, elvix] 

1.1.3-final 2006-09-20
======================

 * Disabled translation of AJAX-ified smart folder info to temporarily remedy
   http://dev.plone.org/plone/ticket/5806
   [jensens]

1.1.2-final 2006-09-11
======================
 * Changed integration tests to test Unicode titles instead of plain ascii.
   [hannosch]

 * Added review state coloring to atct_topic_view. This closes
   http://dev.plone.org/plone/ticket/5481.
   [hannosch]

 * Added i18n statement to atct_topic_view content, as for example review states
   and type names should be translated here as well. This closes
   http://dev.plone.org/plone/ticket/5436.
   [hannosch]

 * Fixed selection criteria to allow Unicode values. This fixes
   http://dev.plone.org/plone/ticket/5229.
   [hannosch]

 * Don't setup a 'ATCT Setup' control panel category anymore, it's not used.
   [hannosch]

1.1.1-final 2006-06-08
======================

 * Changed two logging.PROBLEM to logging.WARNING. PROBLEM level was zLOG only.
   [hannosch]

1.1.0-final 2006-06-03
======================

 * Added TextIndexNG3 to list of indexes.
   [ajung]

 * Moved css rules for the photo album view inside Plone's public.css, instead
   of having them inline in the template. This way they can be overridden.
   This closes http://dev.plone.org/plone/ticket/4765.
   [hannosch]

 * Made ATTopic queryCatalog properly support b_size, thanks to patch from