@@ -1,3 +1,7 @@
+ * ATEvent.setSubject needs to set multiple EventTypes to avoid pruning
+   the subject list.  Applied patch from rossp.  Fixes
+   http://dev.plone.org/plone/ticket/5770
+
  * Add alt attributes to Topic table view type icons.  This closes
    http://dev.plone.org/plone/ticket/5562
    [alecm]
